# PW-HW08

./: pyproject.toml
part_1/: main.py  models.py  seed.py
part_2/: consumer.py  models.py  producer.py
